<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FileReadWritingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/llBtn"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnWriteToInternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_internal"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnReadFromInternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_from_internal"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnWriteToExternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_external"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnReadFromExternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_from_external"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etText"
        app:layout_constraintTop_toBottomOf="@+id/llBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/etText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>