<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LocationUpdatingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/llBtn"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnGetLastLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_last_location"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnGetLocationUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location_update"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnRemoveLocationUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_location_update"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tvDescription"/>

</android.support.constraint.ConstraintLayout>